<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="first_human">Your move first</string>
    <string name="human_turn">Your turn</string>
    <string name="computer_turn">Computer\'s turn</string>
    <string name="result_human_wins">You Win!</string>
    <string name="result_computer_wins">Computer Wins!</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="human">Human:  </string>
    <string name="ties">Ties:  </string>
    <string name="computer">Computer:  </string>
    <string name="dev_heading">Developer Info</string>
    <string name="dev_info">
        <b>Name:</b> Alvin Ung\nWestern Washington University</string>
    <string name="about_heading">About</string>
    <string name="about_info">This app is a simple single player tic tac toe game against a computer.</string>
    <string name="new_game">New Game</string>
    <string name="exit_game">Exit Game</string>

</resources>
